--- a/static/styles/lib/bootstrap/scss/_close.scss
+++ b/static/styles/lib/bootstrap/scss/_close.scss
@@ -1,21 +1,17 @@
 .close {
   float: right;
-  font-size: $close-font-size;
+  font-size: ($font-size-base * 1.5);
   font-weight: $close-font-weight;
   line-height: 1;
   color: $close-color;
   text-shadow: $close-text-shadow;
-  opacity: .5;
+  opacity: .2;
 
   @include hover-focus {
     color: $close-color;
     text-decoration: none;
-    opacity: .75;
-  }
-
-  // Opinionated: add "hand" cursor to non-disabled .close elements
-  &:not([disabled]):not(.disabled) {
     cursor: pointer;
+    opacity: .5;
   }
 }
 
@@ -24,11 +20,12 @@
 // If you want the anchor version, it requires `href="#"`.
 // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
-// stylelint-disable property-no-vendor-prefix, selector-no-qualifying-type
+// scss-lint:disable QualifyingElement
 button.close {
   padding: 0;
-  background-color: transparent;
+  cursor: pointer;
+  background: transparent;
   border: 0;
   -webkit-appearance: none;
 }
-// stylelint-enable
+// scss-lint:enable QualifyingElement
