--- a/static/styles/lib/bootstrap/scss/_forms.scss
+++ b/static/styles/lib/bootstrap/scss/_forms.scss
@@ -1,4 +1,4 @@
-// stylelint-disable selector-no-qualifying-type
+// scss-lint:disable QualifyingElement
 
 //
 // Textual form controls
@@ -7,13 +7,17 @@
 .form-control {
   display: block;
   width: 100%;
+  // // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  // height: $input-height;
   padding: $input-padding-y $input-padding-x;
   font-size: $font-size-base;
   line-height: $input-line-height;
   color: $input-color;
   background-color: $input-bg;
+  // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214.
+  background-image: none;
   background-clip: padding-box;
-  border: $input-border-width solid $input-border-color;
+  border: $input-btn-border-width solid $input-border-color;
 
   // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
   @if $enable-rounded {
@@ -25,7 +29,7 @@
   }
 
   @include box-shadow($input-box-shadow);
-  @include transition($input-transition);
+  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
 
   // Unstyle the caret on `<select>`s in IE10+.
   &::-ms-expand {
@@ -38,7 +42,7 @@
 
   // Placeholder
   &::placeholder {
-    color: $input-placeholder-color;
+    color: $input-color-placeholder;
     // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
     opacity: 1;
   }
@@ -50,15 +54,20 @@
   // don't honor that edge case; we style them as disabled anyway.
   &:disabled,
   &[readonly] {
-    background-color: $input-disabled-bg;
+    background-color: $input-bg-disabled;
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
+  }
+
+  &:disabled {
+    cursor: $cursor-disabled;
   }
 }
 
 select.form-control {
   &:not([size]):not([multiple]) {
-    height: $input-height;
+    $select-border-width: ($border-width * 2);
+    height: calc(#{$input-height} - #{$select-border-width});
   }
 
   &:focus::-ms-value {
@@ -76,7 +85,6 @@ select.form-control {
 .form-control-file,
 .form-control-range {
   display: block;
-  width: 100%;
 }
 
 
@@ -84,46 +92,52 @@ select.form-control {
 // Labels
 //
 
-// For use with horizontal and inline forms, when you need the label (or legend)
-// text to align with the form controls.
+// For use with horizontal and inline forms, when you need the label text to
+// align with the form controls.
 .col-form-label {
-  padding-top: calc(#{$input-padding-y} + #{$input-border-width});
-  padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
-  margin-bottom: 0; // Override the `<label>/<legend>` default
-  font-size: inherit; // Override the `<legend>` default
-  line-height: $input-line-height;
+  padding-top: $input-padding-y;
+  padding-bottom: $input-padding-y;
+  margin-bottom: 0; // Override the `<label>` default
 }
 
 .col-form-label-lg {
-  padding-top: calc(#{$input-padding-y-lg} + #{$input-border-width});
-  padding-bottom: calc(#{$input-padding-y-lg} + #{$input-border-width});
+  padding-top: $input-padding-y-lg;
+  padding-bottom: $input-padding-y-lg;
   font-size: $font-size-lg;
-  line-height: $input-line-height-lg;
 }
 
 .col-form-label-sm {
-  padding-top: calc(#{$input-padding-y-sm} + #{$input-border-width});
-  padding-bottom: calc(#{$input-padding-y-sm} + #{$input-border-width});
+  padding-top: $input-padding-y-sm;
+  padding-bottom: $input-padding-y-sm;
   font-size: $font-size-sm;
-  line-height: $input-line-height-sm;
 }
 
 
-// Readonly controls as plain text
 //
-// Apply class to a readonly input to make it appear like regular plain
-// text (without any border, background color, focus indicator)
+// Legends
+//
 
-.form-control-plaintext {
-  display: block;
-  width: 100%;
+// For use with horizontal and inline forms, when you need the legend text to
+// be the same size as regular labels, and to align with the form controls.
+.col-form-legend {
   padding-top: $input-padding-y;
   padding-bottom: $input-padding-y;
-  margin-bottom: 0; // match inputs if this class comes on inputs with default margins
+  margin-bottom: 0;
+  font-size: $font-size-base;
+}
+
+
+// Static form control text
+//
+// Apply class to an element to make any string of text align with labels in a
+// horizontal form layout.
+
+.form-control-static {
+  padding-top: $input-padding-y;
+  padding-bottom: $input-padding-y;
   line-height: $input-line-height;
-  background-color: transparent;
   border: solid transparent;
-  border-width: $input-border-width 0;
+  border-width: 1px 0;
 
   &.form-control-sm,
   &.form-control-lg {
@@ -144,7 +158,6 @@ select.form-control {
 .form-control-sm {
   padding: $input-padding-y-sm $input-padding-x-sm;
   font-size: $font-size-sm;
-  line-height: $input-line-height-sm;
   @include border-radius($input-border-radius-sm);
 }
 
@@ -157,7 +170,6 @@ select.form-control-sm {
 .form-control-lg {
   padding: $input-padding-y-lg $input-padding-x-lg;
   font-size: $font-size-lg;
-  line-height: $input-line-height-lg;
   @include border-radius($input-border-radius-lg);
 }
 
@@ -179,25 +191,7 @@ select.form-control-lg {
 
 .form-text {
   display: block;
-  margin-top: $form-text-margin-top;
-}
-
-
-// Form grid
-//
-// Special replacement for our grid system's `.row` for tighter form layouts.
-
-.form-row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -5px;
-  margin-left: -5px;
-
-  > .col,
-  > [class*="col-"] {
-    padding-right: 5px;
-    padding-left: 5px;
-  }
+  margin-top: ($spacer * .25);
 }
 
 
@@ -208,48 +202,99 @@ select.form-control-lg {
 .form-check {
   position: relative;
   display: block;
-  padding-left: $form-check-input-gutter;
-}
+  margin-bottom: ($spacer * .75);
 
-.form-check-input {
-  position: absolute;
-  margin-top: $form-check-input-margin-y;
-  margin-left: -$form-check-input-gutter;
+  // Move up sibling radios or checkboxes for tighter spacing
+  + .form-check {
+    margin-top: -.25rem;
+  }
 
-  &:disabled ~ .form-check-label {
-    color: $text-muted;
+  &.disabled {
+    .form-check-label {
+      color: $text-muted;
+      cursor: $cursor-disabled;
+    }
   }
 }
 
 .form-check-label {
+  padding-left: 1.25rem;
   margin-bottom: 0; // Override default `<label>` bottom margin
+  cursor: pointer;
 }
 
-.form-check-inline {
-  display: inline-flex;
-  align-items: center;
-  padding-left: 0; // Override base .form-check
-  margin-right: $form-check-inline-margin-x;
+.form-check-input {
+  position: absolute;
+  margin-top: .25rem;
+  margin-left: -1.25rem;
 
-  // Undo .form-check-input defaults and add some `margin-right`.
-  .form-check-input {
+  &:only-child {
     position: static;
-    margin-top: 0;
-    margin-right: $form-check-inline-input-margin-x;
-    margin-left: 0;
+  }
+}
+
+// Radios and checkboxes on same line
+.form-check-inline {
+  position: relative;
+  display: inline-block;
+  padding-left: 1.25rem;
+  margin-bottom: 0; // Override default `<label>` bottom margin
+  vertical-align: middle;
+  cursor: pointer;
+
+  + .form-check-inline {
+    margin-left: .75rem;
+  }
+
+  &.disabled {
+    color: $text-muted;
+    cursor: $cursor-disabled;
   }
 }
 
 
-// Form validation
+// Form control feedback states
 //
-// Provide feedback to users when form field values are valid or invalid. Works
-// primarily for client-side validation via scoped `:invalid` and `:valid`
-// pseudo-classes but also includes `.is-invalid` and `.is-valid` classes for
-// server side validation.
+// Apply contextual and semantic states to individual form controls.
 
-@include form-validation-state("valid", $form-feedback-valid-color);
-@include form-validation-state("invalid", $form-feedback-invalid-color);
+.form-control-feedback {
+  margin-top: ($spacer * .25);
+}
+
+.form-control-success,
+.form-control-warning,
+.form-control-danger {
+  padding-right: ($input-padding-x * 3);
+  background-repeat: no-repeat;
+  background-position: center right ($input-height / 4);
+  background-size: ($input-height / 2) ($input-height / 2);
+}
+
+// Form validation states
+.has-success {
+  @include form-control-validation($brand-success);
+
+  .form-control-success {
+    background-image: $form-icon-success;
+  }
+}
+
+.has-warning {
+  @include form-control-validation($brand-warning);
+
+  .form-control-warning {
+    background-image: $form-icon-warning;
+  }
+}
+
+.has-danger {
+  @include form-control-validation($brand-danger);
+
+  .form-control-danger {
+    background-image: $form-icon-danger;
+  }
+}
+
 
 // Inline forms
 //
@@ -261,33 +306,14 @@ select.form-control-lg {
 // default HTML form controls and our custom form controls (e.g., input groups).
 
 .form-inline {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center; // Prevent shorter elements from growing to same height as others (e.g., small buttons growing to normal sized button height)
-
-  // Because we use flex, the initial sizing of checkboxes is collapsed and
-  // doesn't occupy the full-width (which is what we want for xs grid tier),
-  // so we force that here.
-  .form-check {
-    width: 100%;
-  }
 
   // Kick in the inline
   @include media-breakpoint-up(sm) {
-    label {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0;
-    }
-
     // Inline-block all the things for "inline"
     .form-group {
-      display: flex;
-      flex: 0 0 auto;
-      flex-flow: row wrap;
-      align-items: center;
+      display: inline-block;
       margin-bottom: 0;
+      vertical-align: middle;
     }
 
     // Allow folks to *not* use `.form-group`
@@ -298,36 +324,51 @@ select.form-control-lg {
     }
 
     // Make static controls behave like regular ones
-    .form-control-plaintext {
+    .form-control-static {
       display: inline-block;
     }
 
     .input-group {
+      display: inline-table;
       width: auto;
+      vertical-align: middle;
+
+      .input-group-addon,
+      .input-group-btn,
+      .form-control {
+        width: auto;
+      }
+    }
+
+    // Input groups need that 100% width though
+    .input-group > .form-control {
+      width: 100%;
+    }
+
+    .form-control-label {
+      margin-bottom: 0;
+      vertical-align: middle;
     }
 
     // Remove default margin on radios/checkboxes that were used for stacking, and
     // then undo the floating of radios and checkboxes to match.
     .form-check {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: auto;
+      display: inline-block;
+      margin-top: 0;
+      margin-bottom: 0;
+      vertical-align: middle;
+    }
+    .form-check-label {
       padding-left: 0;
     }
     .form-check-input {
       position: relative;
-      margin-top: 0;
-      margin-right: $form-check-input-margin-x;
       margin-left: 0;
     }
 
-    .custom-control {
-      align-items: center;
-      justify-content: center;
-    }
-    .custom-control-label {
-      margin-bottom: 0;
+    // Re-override the feedback icon.
+    .has-feedback .form-control-feedback {
+      top: 0;
     }
   }
 }
