--- a/static/styles/lib/bootstrap/scss/_images.scss
+++ b/static/styles/lib/bootstrap/scss/_images.scss
@@ -16,6 +16,7 @@
   background-color: $thumbnail-bg;
   border: $thumbnail-border-width solid $thumbnail-border-color;
   @include border-radius($thumbnail-border-radius);
+  transition: all .2s ease-in-out;
   @include box-shadow($thumbnail-box-shadow);
 
   // Keep them at most 100% wide
@@ -32,11 +33,11 @@
 }
 
 .figure-img {
-  margin-bottom: ($spacer / 2);
+  margin-bottom: ($spacer-y / 2);
   line-height: 1;
 }
 
 .figure-caption {
   font-size: $figure-caption-font-size;
-  color: $figure-caption-color;
+  color: $gray-light;
 }
