--- a/static/styles/lib/bootstrap/scss/_print.scss
+++ b/static/styles/lib/bootstrap/scss/_print.scss
@@ -1,4 +1,4 @@
-// stylelint-disable declaration-no-important, selector-no-qualifying-type
+// scss-lint:disable QualifyingElement
 
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css
 
@@ -12,9 +12,15 @@
   @media print {
     *,
     *::before,
-    *::after {
+    *::after,
+    *::first-letter,
+    p::first-line,
+    div::first-line,
+    blockquote::first-line,
+    li::first-line {
       // Bootstrap specific; comment out `color` and `background`
-      //color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
+      //color: #000 !important; // Black prints faster:
+                                //   http://www.sanbeiji.com/archives/953
       text-shadow: none !important;
       //background: transparent !important;
       box-shadow: none !important;
@@ -86,7 +92,13 @@
     .navbar {
       display: none;
     }
-    .badge {
+    .btn,
+    .dropup > .btn {
+      > .caret {
+        border-top-color: #000 !important;
+      }
+    }
+    .tag {
       border: $border-width solid #000;
     }
 
