--- a/static/styles/lib/bootstrap/scss/mixins/_hover.scss
+++ b/static/styles/lib/bootstrap/scss/mixins/_hover.scss
@@ -1,4 +1,3 @@
-// stylelint-disable indentation
 @mixin hover {
   // TODO: re-enable along with mq4-hover-shim
 //  @if $enable-hover-media-query {
@@ -9,20 +8,19 @@
 //    }
 //  }
 //  @else {
-    &:hover { @content; }
+    &:hover { @content }
+//  }
 }
-
 
 @mixin hover-focus {
   @if $enable-hover-media-query {
-    &:focus {
-      @content;
-    }
-    @include hover { @content; }
-  } @else {
+    &:focus { @content }
+    @include hover { @content }
+  }
+  @else {
     &:focus,
     &:hover {
-      @content;
+      @content
     }
   }
 }
@@ -31,14 +29,15 @@
   @if $enable-hover-media-query {
     &,
     &:focus {
-      @content;
+      @content
     }
-    @include hover { @content; }
-  } @else {
+    @include hover { @content }
+  }
+  @else {
     &,
     &:focus,
     &:hover {
-      @content;
+      @content
     }
   }
 }
@@ -47,14 +46,15 @@
   @if $enable-hover-media-query {
     &:focus,
     &:active {
-      @content;
+      @content
     }
-    @include hover { @content; }
-  } @else {
+    @include hover { @content }
+  }
+  @else {
     &:focus,
     &:active,
     &:hover {
-      @content;
+      @content
     }
   }
 }
